scripts/nullaway/original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8.txt
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/SET_ArrayPlace.java:12: error: [NullAway] initializer method does not guarantee @NonNull field expression (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private SET_ArrayPlace(ArrayPlace...arrayPlaces) {
	        ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:14: error: [NullAway] initializer method does not guarantee @NonNull fields from (line 11), to (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private FOR(NumericVariable variable) {
	        ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/IF.java:9: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Integer lineNumber = null;
	                ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:31: error: [NullAway] unboxing of a @Nullable value
		int maximalValue = HPBasicProgram.maxValueForLoopVariable.get(varName);
		                                                             ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:34: error: [NullAway] assigning @Nullable expression to @NonNull field
			HPBasicProgram.nextLineNumber = HPBasicProgram.lineNumberForLoopVariable.get(varName);
			                              ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/REPLACE.java:14: error: [NullAway] initializer method does not guarantee @NonNull field expression (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private REPLACE(StringVariable variable, NumericExpression from, NumericExpression to) {
	        ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:11: error: [NullAway] @NonNull static field currentLineNumber not initialized
	public static Integer currentLineNumber;
	                      ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:12: error: [NullAway] @NonNull static field nextLineNumber not initialized
	public static Integer nextLineNumber;
	                      ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/NumericVariable.java:10: error: [NullAway] initializer method does not guarantee @NonNull field value (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public NumericVariable(String name) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/FunctionVariable.java:7: error: [NullAway] initializer method does not guarantee @NonNull field body (line 4) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public FunctionVariable(String name) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:29: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return lines.get(lineNumber);
		^
    (see http://t.uber.com/nullaway )
Note: ../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/functions/TIM.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
11 errors
